# dotclock

./: .cproject  .gitignore  .project  CLAUDE.md  HEDC-0001.SLDDRW  HEDC-0001.SLDPRT  HEDC-B002.bom.ods  README.md
.claude/: settings.local.json
HEDC-B001/: HEDC-B001-B_Paste.gbr  HEDC-B001-Edge_Cuts.gbr  HEDC-B001-F_Paste.gbr  HEDC-B001-job.gbrjob  HEDC-B001.kicad_pcb  HEDC-B001.kicad_prl  HEDC-B001.kicad_pro  HEDC-B001.kicad_sch  SC-B001.relays.kicad_sch  SC-B001.solar4162.kicad_sch  fp-info-cache
HEDC-B002/: HEDC-B002-B_Cu.gbr  HEDC-B002-B_Mask.gbr  HEDC-B002-B_Silkscreen.gbr  HEDC-B002-F_Cu.gbr  HEDC-B002-F_Mask.gbr  HEDC-B002-F_Silkscreen.gbr  HEDC-B002-hardware-reference.md  HEDC-B002.csv  HEDC-B002.kicad_pcb  HEDC-B002.kicad_prl  HEDC-B002.kicad_pro  HEDC-B002.kicad_sch  SC-B001-V5.bom.xls  SC-B001.relays.kicad_sch  SC-B001.solar.kicad_sch  SC-B001.solarlm2595.kicad_sch  fp-BCD5.tmp  fp-info-cache  untitled.kicad_sch
HEDC-F001/: .cproject  README.md  partitions.csv  sdkconfig  sdkconfig.old
HEDC-F001/main/: CMakeLists.txt  alarm.c  alarm.h  audio.c  audio.h  control_fsm.c  control_fsm.h  display.c  display.h  encoder.c  encoder.h  hard_ui.c  i2c.c  i2c.h  idf_component.yml  main.c  power_mgmt.c  power_mgmt.h  prvtkey.pem  rf_433.c  rf_433.h  rtc.c  rtc.h  sensors.c  sensors.h  servercert.pem  settings.c  settings.h  solar.c  solar.h  storage.c  storage.h  uart_comms.c  uart_comms.h  version.cmake  version.h.in  webpage.h  webpage.html  webpage_brotli.h  webpage_compile.py  (+3 more)
HEDC-F001/web_example/: CMakeLists.txt  main.c  simple_dns_server.c  simple_dns_server.h  webpage.h  webpage.html  webpage_compile.py  webpage_minified.html  webserver.c  webserver.h
